styles.css
/* ... */
.competition {
  text-decoration: none;
  color: inherit;
  display: grid;
  grid-template-columns: 55px minmax(0, 1fr);
  column-gap: 10px;
  align-items: center;
}
.competition-list-item .competition-name {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.calendar-event {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 2px solid currentColor;
  border-radius: 3px;
  padding: 3px;
  font-size: 0.75rem; /* 12px */
  border-top-width: 8px;
  min-height: 60px;
}
.calendar-event b {
  font-size: 1rem; /* 16px */
}

.competition p {
  margin: 0;
  opacity: 0.7;
  font-size: 0.875rem; /* 14px */
}
.competition h4 {
  font-size: 1rem; /* 16px */
  margin: 0 0 4px;
  font-weight: normal;
}
.competitions li.completed .competition {
  color: inherit;
}

.competitions li.current .competition h4 {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}
.competitions li.current .competition h4 > * {
  margin-right: 10px;
}
.competitions li.current .competition h4:after {
  content: 'ongoing';
  text-transform: uppercase;
  background-color: var(--primary);
  display: inline-block;
  padding: 4px 7px;
  border-radius: 3px;
  font-size: 0.625rem; /* 10px */
  line-height: 1;
  color: var(--light);
}

.leaderboard-page ul li {
  all: unset;
  display: block;
  border-bottom: 1px solid rgba(var(--text-rgb), 0.2);
}

.leaderboard-page .player .player-grid,
.oom .player {
  all: unset;
  display: grid;
  grid-template-columns: 30px auto 50px;
  column-gap: 10px;
  padding: 10px 10px;
  transition: all 0.2s;
  min-height: 50px;
}

.leaderboard-page .stats {
  transition: all 0.2s;
  overflow: hidden;
  grid-column-start: 2;
  grid-column-end: 4;
}

.leaderboard-page .favorite-button {
  all: unset;
  cursor: pointer;
  position: absolute;
  bottom: 0;
  left: 50%;
  padding: 0;
  line-height: 0;
  transform: translateX(-50%);
}
.leaderboard-page .player-entry-only .favorite-button {
  bottom: auto;
  top: 0;
}
.leaderboard-page .player-entry-first-cut {
  border-top: 5px solid var(--primary);
  padding-top: 10px;
  margin-top: -1px;
  position: relative;
}
.leaderboard-page .player-entry-first-cut:before {
  content: 'PROJECTED CUT LINE';
  line-height: 1;
  position: absolute;
  background-color: var(--background);
  padding: 0 10px;
  color: var(--primary);
  top: -2px;
  left: 50%;
  transform: translate(-50%, -50%);
}
.leaderboard-page .player-entry-first-cut-performed:before {
  content: 'CUT LINE';
}

.favorite-button {
  all: unset;
  cursor: pointer;
  padding: 0;
  line-height: 0;
}
.favorite-button.is-favorite {
  color: var(--primary);
}
.favorite-button svg {
  transition: fill 0.2s;
  fill: currentColor;
}

.leaderboard-page .round {
  font-family: monospace;
  font-size: 0.75rem; /* 12px */
  line-height: 1;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 2px;
}

.round-score {
  opacity: 0.5;
  width: 0.9375rem; /* 15px */
  height: 0.9375rem; /* 15px */
  display: block;
  text-align: center;
  line-height: 1;
  font-size: 0.625rem; /* 10px */
  display: flex;
  align-items: center;
  justify-content: center;
  border: 0px solid rgba(var(--text-rgb), 0.5);
  position: relative;
}

.round-total {
  font-weight: bold;
}
.round-total.under-par {
  color: var(--primary);
}
.round-score.birdie {
  border-width: 1px;
  border-radius: 50%;
}
.round-score.eagle {
  border-width: 1px;
  border-radius: 50%;
  border-color: var(--primary);
  color: var(--primary);
  opacity: 0.8;
}
.round-score.eagle:after {
  content: '';
  display: block;
  top: 1px;
  left: 1px;
  right: 1px;
  bottom: 1px;
  border: 1px solid rgba(0, 0, 0, 0.5);
  border-radius: 50%;
  position: absolute;
  border-color: var(--primary);
  color: var(--primary);
}
.round-score.hio {
  opacity: 1;
  font-weight: bold;
  border-width: 0;
  border-radius: 50%;
  background-color: var(--primary);
  color: var(--light);
}
.round-score.bogey {
  border-width: 1px;
}
.round-score.bogey-plus {
  border-width: 1px;
}
.round-score.bogey-plus:after {
  content: '';
  display: block;
  top: 1px;
  left: 1px;
  right: 1px;
  bottom: 1px;
  border: 1px solid rgba(0, 0, 0, 0.5);
  position: absolute;
}

.leaderboard-page .score {
  text-align: right;
  font-size: 1.125rem; /* 18px */
  line-height: 25px;
}

.leaderboard-page .position {
  position: relative;
  font-size: 1.125rem; /* 18px */
  grid-row-start: 1;
  grid-row-end: 3;
  text-align: center;
}
.leaderboard-page .position-long-text {
  font-size: 0.75rem; /* 12px */
}
.leaderboard-page .score.under-par {
  color: var(--primary);
}

.players .player .club,
.leaderboard-page .club {
  display: block;
  opacity: 0.5;
  font-size: 0.75rem; /* 12px */
  margin: 3px 0 5px;
}
main {
  min-height: 100vh;
}
footer {
  text-align: center;
  opacity: 0.3;
  padding: 100px 10px;
}

.oom .round {
  justify-content: flex-start;
  opacity: 1;
}

.oom .round-score {
  width: 1.5rem; /* 24px */
  height: auto;
  line-height: 15px;
  margin-right: 3px;
}

.oom .round-score.first {
  background-color: var(--primary);
  color: var(--light);
  border: 1px solid var(--primary);
  font-weight: bold;
  opacity: 1;
}
.oom .round-score.top-10 {
  border: 1px solid var(--medium);
}
.courses {
  padding: 10px;
  display: flex;
  flex-wrap: wrap;
}
.courses > * {
  margin-right: 10px;
}
.courses h4 {
  margin: 0 0 5px;
}
.courses a {
  text-decoration: none;
  color: inherit;
  font-size: 0.875rem; /* 14px */
}

.course-4:before,
.course-3:before,
.course-2:before,
.course-1:before {
  content: ' ';
  width: 7px;
  height: 7px;
  display: inline-block;
  border-radius: 2px;
  background-color: var(--primary);
  margin-right: 5px;
  vertical-align: baseline;
}
.course-2:before {
  background-color: var(--secondary);
}
.course-3:before {
  background-color: var(--primary-light);
}
.course-4:before {
  background-color: var(--secondary-light);
}
/* ... */

